[package]
name = "brioschenbot-rs"
version = "0.1.0"
authors = ["Torben Lehmann <torben.leh@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
tokio = {version = "0.2", features = ["fs", "macros"]}
telegram-bot = "0.7.0"
serde_json = "1.0.59"
mysql = "20.0.1"
ts3-query = "0.3.0"
regex = "1.4.2"
reqwest = "0.10.9"
rand = "0.7.3"